--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         >
       </div>
       <img
-        src="img/Coding _Monochromatic (1).png"
+        src="img/undraw_Proud_coder_re_exuy.png"
         alt="photo of a man who codes"
         class="img-coding"
       />
