--- a/contact.html
+++ b/contact.html
@@ -117,9 +117,11 @@
         style="background-color: #3282b8"
       >
         <span class="navbar-text" id="footer"
-          >Coded by Tetiana Bedina
-          <a href="mailto:tibedina@gmail.com" title="Here is my email"
-            >tibedina@gmail.com</a
+          >Coded by Tetiana Bedina<a
+            href="mailto:tibedina@gmail.com"
+            title="Here is my email"
+          >
+            tibedina@gmail.com</a
           ></span
         >
       </nav>
