--- a/about.html
+++ b/about.html
@@ -106,9 +106,10 @@
       <div class="col-lg-5" id="info-about-me">
         <h2>Tetiana Bedina</h2>
         <p>
-          Design engineer, frontend development. I am currently finishing 3
-          SheCodes courses and intend to study the fourth one. Looking forward
-          to trying my hand at an interesting commercial project
+          Design engineer, frontend development. At the moment I have completed
+          the full SheCodes course. Looking forward to trying my hand at an
+          interesting commercial project. In the meantime, I continue to develop
+          in this direction.
         </p>
         <a
           href="work.html"
