--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Tetiana is a front-end engineer based in Ukraine."
+      content="Tetiana is a front-end engineer based in Canada."
     />
     <title>Portfolio Tetiana Bedina</title>
 
@@ -96,14 +96,14 @@
     </header>
     <div class="data">
       <h1 id="name">Tetiana Bedina</h1>
-      <p>Frontend development, based in Ukraine(Kyiv)</p>
+      <p>Frontend development, based in Calgary(Canada)</p>
       <div class="button__contact">
         <a href="contact.html" title="Here you can contact me" class="button"
           >Contact me</a
         >
       </div>
       <img
-        src="img/undraw_Proud_coder_re_exuy.png"
+        src="img/undraw_Programmer_re_owql.png"
         alt="photo of a man who codes"
         class="img-coding"
       />
