--- a/work.html
+++ b/work.html
@@ -140,8 +140,7 @@
               <div class="image">
                 <img
                   src="img/WeatherProject.jpg"
-                  alt="Photo of my weather forecast project
-"
+                  alt="Photo of my weather forecast project"
                   class="img-fluid"
                 />
               </div>
@@ -155,7 +154,7 @@
                   <p>
                     The Weather project shows the current weather in your chosen
                     city, the forecast for the next 5 days. It is possible to
-                    convert units from degrees to Fahrenheit and vice versa. You
+                    convert units from Celsius to Fahrenheit and vice versa. You
                     can also select the current location and the weather will be
                     displayed for the city where you are.
                   </p>
@@ -174,8 +173,7 @@
               <div class="image">
                 <img
                   src="img/CroissantProject.jpg"
-                  alt="Photo of my project croissant recipe
-"
+                  alt="Photo of my project croissant recipe"
                   class="img-fluid"
                 />
               </div>
@@ -195,6 +193,71 @@
                 </div>
                 <a
                   href="https://lovely-tulumba-eb6e52.netlify.app/"
+                  class="button"
+                  title="You can learn more about my project here"
+                  >View detail project</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col d-none d-md-block">
+              <div class="image">
+                <img
+                  src="img/React Dictionary project.jpg"
+                  alt="Photo of my  React Dictionary project"
+                  class="img-fluid"
+                />
+              </div>
+            </div>
+            <div class="col">
+              <div class="project-description">
+                <div class="item__title">
+                  <h2>React Dictionary project</h2>
+                </div>
+                <div class="text">
+                  <p>
+                    With the help of this dictionary, you can find the word you
+                    are interested in, its transcription, hear the pronunciation
+                    and enjoy the images that correspond to this word. You can
+                    also find out the definition of this word and synonyms.
+                  </p>
+                </div>
+                <a
+                  href="https://cheerful-brioche-37bce7.netlify.app/"
+                  class="button"
+                  title="You can learn more about my project here"
+                  >View detail project</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col d-none d-md-block">
+              <div class="image">
+                <img
+                  src="img/React Weather project.jpg"
+                  alt="Photo of my  React Dictionary project"
+                  class="img-fluid"
+                />
+              </div>
+            </div>
+            <div class="col">
+              <div class="project-description">
+                <div class="item__title">
+                  <h2>React Weather project</h2>
+                </div>
+                <div class="text">
+                  <p>
+                    This React Project Weather shows the current weather in your
+                    chosen city, the forecast for the next 5 days. You can
+                    convert units of measurement from Celsius to Fahrenheit and
+                    vice versa. Compared to the previous project, Weather is
+                    made in react and supplemented with animated images.
+                  </p>
+                </div>
+                <a
+                  href="https://snazzy-puppy-843486.netlify.app/"
                   class="button"
                   title="You can learn more about my project here"
                   >View detail project</a
